--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 -i https://pypi.org/simple
 alembic==1.9.2; python_version >= '3.7'
-boto3==1.34.30; python_version >= '3.8'
-botocore==1.34.30; python_version >= '3.8'
-certifi==2023.11.17; python_version >= '3.6'
+boto3==1.34.34; python_version >= '3.8'
+botocore==1.34.34; python_version >= '3.8'
+certifi==2024.2.2; python_version >= '3.6'
 charset-normalizer==3.3.2; python_full_version >= '3.7.0'
 click==8.1.3; python_version >= '3.7'
+dnspython==2.5.0; python_version >= '3.8'
+email-validator==2.1.0.post1; python_version >= '3.8'
 faker==22.6.0; python_version >= '3.8'
 flask==2.2.2; python_version >= '3.7'
 flask-cors==3.0.10
